Deploying Vite React website to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeblazers",
-  "homepage": "",
+  "homepage": "https://poojaramnaney.github.io/FinEdge/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
